dhaumann:     fix bug #156330: lugin loading in kate sessions

This removes the default.katesession and merges it back into the katerc
    config file. Unnamed sessions are read and written back to katerc. This
    way, changes in the plugin settings and the recent-files-menu are saved.
    
    Please test this thoroughly, so we can be sure it's working for KDE 4.6!

BUG: 156330


svn path=/trunk/KDE/kdesdk/kate/; revision=1191600